fix: ortographe & edge scrollbar again and again

--- a/src/style/app.css
+++ b/src/style/app.css
@@ -24,4 +24,5 @@
 
 html {
   scroll-behavior: smooth;
+  -ms-overflow-style: -ms-autohiding-scrollbar;
 }
